project.clj: Add com.cognitect/transit-clj and :jvm-opts